[package]
name = "syn-file-expand"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/syn-file-expand"
description = "Library and a CLI tool to load full source code of multi-file crates"
keywords = ["expand","rust","source-code","inline-modules"]
categories = ["command-line-utilities", "development-tools::procedural-macro-helpers"]
include = ["src","Cargo.toml","tests", "examples", "resources", "README.md"]

[dependencies]
im-rc = "15.0.0"
itertools = "0.10.3"
proc-macro2 = "1.0.36"
syn = { version = "1.0.88", features = ["full","extra-traits"] }
thiserror = "1.0.30"

[dev-dependencies]
quote = "1.0.15"
syn = { version = "1.0.88", features = ["printing"]}
