[package]
name = "syn-file-expand"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vi/syn-file-expand"
description = "Library to load full source code of multi-file crates"
keywords = ["expand","rust","source-code","inline-modules"]
categories = ["development-tools::procedural-macro-helpers"]
include = ["src","Cargo.toml","tests", "examples", "resources", "README.md"]

[dependencies]
im-rc = "15.0.0"
itertools = "0.10.3"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "2", features = ["full","extra-traits","printing"] }
thiserror = "1.0.30"

[dev-dependencies]
#pretty_assertions = "1.4"
prettyplease = "0.2"

[workspace]
members = [".", "crates/*"]
