[package]
name = "syn-file-expand-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-file-expand = "0.1.0"
quote = "1.0.15"
syn = { version = "1.0.88", features = ["full"] }
proc-macro2 = "1.0.36"
gumdrop = "0.8.1"
