[package]
name = "syn-file-expand-cli"
version = "0.3.0"
edition = "2021"

readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/syn-file-expand"
description = "CLI tool to read full source code of multi-file crates and output it to stdout"
keywords = ["expand","rust","source-code","inline-modules"]
categories = ["command-line-utilities", "development-tools::procedural-macro-helpers"]
include = ["src","Cargo.toml","README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-file-expand = {version = "0.3.0", path = "../.."}
quote = "1.0.15"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0.36"
gumdrop = "0.8.1"
prettyplease = { version = "0.2", optional = true }

[features]
default = ["prettyplease"]
